--- a/makefile.am
+++ b/makefile.am
@@ -68,10 +68,10 @@ install-exec-hook:
        $(INSTALL) --mode='u=rwx' mcron$(EXEEXT) $(fpp)cron$(EXEEXT); \
        rm -f $(fpp)crontab$(EXEEXT) > /dev/null 2>&1; \
        $(INSTALL) --mode='u=rwxs,og=rx' mcron$(EXEEXT) $(fpp)crontab$(EXEEXT); \
-       $(INSTALL) -d --mode='u=rwx' /var/cron; \
-       $(INSTALL) -d --mode='u=rwx,og=rx' /var/run; \
-       $(INSTALL) -d --mode='u=rwx,og=rx' @GUILE_SITE@; \
-       $(INSTALL) -d --mode='u=rwx,og=rx' @GUILE_SITE@/mcron; \
+       $(INSTALL) -d --mode='u=rwx' $(DESTDIR)/var/cron; \
+       $(INSTALL) -d --mode='u=rwx,og=rx' $(DESTDIR)/var/run; \
+       $(INSTALL) -d --mode='u=rwx,og=rx' $(DESTDIR)@GUILE_SITE@; \
+       $(INSTALL) -d --mode='u=rwx,og=rx' $(DESTDIR)@GUILE_SITE@/mcron; \
     elif [ "x@NO_VIXIE_CLOBBER@" = "xyes" ]; then \
        echo "Not installing Vixie-style programs"; \
     else \
