--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 *~
+.deps
+INSTALL
+aclocal.m4
+autom4te.cache
+config.log
+config.scm
+config.status
+configure
+core.scm
+depcomp
+install-sh
+makefile
+makefile.in
+mcron
+mcron.c
+mcron.info
+mcron.o
+mcron.texinfo
+missing
+texinfo.tex
