Distribute the minimal man page in case the builder hasn't get help2man.

--- a/makefile.am
+++ b/makefile.am
@@ -33,7 +33,7 @@ EXTRA_DIST = makefile.ed mcron.c.template BUGS
 
 info_TEXINFOS = mcron.texinfo
 
-man_MANS = mcron.1
+dist_man_MANS = mcron.1
 
 bin_PROGRAMS = mcron
 mcron_SOURCES = mcron.c
