--- a/makefile.am
+++ b/makefile.am
@@ -27,7 +27,7 @@ MAINTAINERCLEANFILES = configure makefile makefile.in config.guess config.sub \
                        install-sh missing texinfo.tex INSTALL \
                        aclocal.m4 compile depcomp mcron.1
 
-CLEANFILES = mcron.c core.scm
+CLEANFILES = mcron.c
 
 EXTRA_DIST = makefile.ed mcron.c.template BUGS
 
