--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,10 @@ fi
 AC_SUBST(CONFIG_DEBUG)
 
 
+# We have no interest (hence a no-op), but Debian wants this.
+AC_ARG_ENABLE(maintainer-mode)
+
+
 AC_PROG_AWK
 AC_PROG_EGREP
 AM_PROG_CC_C_O
