Fix package name and bug reports email address.
Conflicts:
	ChangeLog
	configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -22,7 +22,8 @@
 
 
 AC_PREREQ(2.61)
-AC_INIT([mcron], [1.0.8], [dale_mellor@users.sourceforge.net])
+AC_INIT([GNU Mcron], [1.0.8], [bug-mcron@gnu.org])
+AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE
 
 
