--- a/scm/mcron/makefile.am
+++ b/scm/mcron/makefile.am
@@ -23,6 +23,11 @@ dist_mcronmodule_DATA = 		\
   crontab.scm				\
   mcron-core.scm
 
+# Extend silent rules to Guile compilation.
+AM_V_GUILEC = $(AM_V_GUILEC_$(V))
+AM_V_GUILEC_ = $(AM_V_GUILEC_$(AM_DEFAULT_VERBOSITY))
+AM_V_GUILEC_0 = @echo "  GUILEC  " $@;
+
 # Unset 'GUILE_LOAD_COMPILED_PATH' altogether while compiling.  Otherwise, if
 # $GUILE_LOAD_COMPILED_PATH contains $(mcronmoduledir), we may find .go files
 # in there that are newer than the local .scm files (for instance because the
@@ -33,6 +38,7 @@ dist_mcronmodule_DATA = 		\
 # XXX: Use the C locale for when Guile lacks
 # <http://git.sv.gnu.org/cgit/guile.git/commit/?h=stable-2.0&id=e2c6bf3866d1186c60bacfbd4fe5037087ee5e3f>.
 .scm.go:
+	$(AM_V_GUILEC)$(MKDIR_P) `dirname "$@"` ;			\
 	unset GUILE_LOAD_COMPILED_PATH ;				\
 	LC_ALL=C							\
 	$(GUILD) compile						\
