build: Use a non-recursive makefile.
* configure.ac (AM_INIT_AUTOMAKE): Use 'subdir-objects' option.
(AC_CONFIG_FILES): Remove 'scm/mcron/makefile' and 'makefile'.  Add
'Makefile'.
* makefile.am: Delete file.  Move its content into ...
* scm/mcron/makefile.am: Likewise.
* Makefile.am: ... this.  New file.
* .gitignore: Update.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-*~
 *.go
+*.o
+*~
 .deps
-INSTALL
-aclocal.m4
-autom4te.cache
 /build-aux/compile
 /build-aux/config.guess
 /build-aux/config.sub
@@ -12,6 +10,19 @@ autom4te.cache
 /build-aux/mdate-sh
 /build-aux/missing
 /build-aux/texinfo.tex
+/doc/.dirstamp
+/doc/config.texi
+/doc/mcron.1
+/doc/mcron.info
+/doc/stamp-vti
+/doc/version.texi
+/mcron
+/mdate-sh
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
 compile
 config.cache
 config.log
@@ -20,17 +31,6 @@ config.status
 configure
 core.scm
 depcomp
-/doc/.dirstamp
-/doc/config.texi
-/doc/mcron.info
-/doc/mcron.1
-/doc/stamp-vti
-/doc/version.texi
 install-sh
-makefile
-makefile.in
-/mcron
-/mdate-sh
-*.o
 missing
 texinfo.tex
