build: Support VPATH builds.
This allows using 'mcron' before it is installed without hardcoding the
local build environment in the executable.

* build-aux/pre-inst-env.in: New script.
* configure.ac (AC_CONFIG_FILES): Create it.
(AC_CONFIG_HEADER): Add 'config.h'.
(moduledir): New variable.
(PACKAGE_LOAD_PATH): new C preprocessor macro.
* mcron.c: Include "config.h".
(main): Don't overwrite Guile load paths.
(inner_main): Prepend Mcron modules load paths.
* Makefile.am (.scm.go, doc/mcron.1): Use 'pre-inst-env'.
(mcron_CFLAGS): Remove GUILE_LOAD_PATH macro.
(noinst_SCRIPTS): New variable.
* .gitignore: Update.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ aclocal.m4
 autom4te.cache
 compile
 config.cache
+config.h
+config.h.in
 config.log
 config.scm
 config.status
@@ -33,4 +35,6 @@ core.scm
 depcomp
 install-sh
 missing
+pre-inst-env
+stamp-h1
 texinfo.tex
