--- a/configure.ac
+++ b/configure.ac
@@ -23,13 +23,15 @@
 
 AC_PREREQ(2.61)
 AC_INIT([GNU Mcron], [1.0.8], [bug-mcron@gnu.org])
+AC_CONFIG_HEADER([config.h])
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([subdir-objects])
 AM_SILENT_RULES([yes])		# enables silent rules by default
 
-mcronmoduledir="${datarootdir}/guile/site/2.0/mcron"
-AC_SUBST([mcronmoduledir])
-
+moduledir="${datarootdir}/guile/site/2.0"
+AC_SUBST([mcronmoduledir], ["${moduledir}/mcron"])
+AC_DEFINE_UNQUOTED([PACKAGE_LOAD_PATH], ["${moduledir}"],
+  [Define to the guile modules location of this package.])
 AC_MSG_CHECKING([whether debugging is requested])
 AC_ARG_ENABLE(debug,
               AC_HELP_STRING([--enable-debug],
@@ -181,6 +183,8 @@ AC_SUBST(CONFIG_TMP_DIR)
 real_program_prefix=`echo $program_prefix | sed s/NONE//`
 AC_SUBST(real_program_prefix)
 
+AC_CONFIG_FILES([pre-inst-env:build-aux/pre-inst-env.in],
+  [chmod +x pre-inst-env])
 AC_CONFIG_FILES([doc/config.texi
                  Makefile
                  scm/mcron/config.scm])
