Taken on board suggestions of Mathieu Lirzin as per e-mails to the bug-mcron@gnu.org mailing list around September 2015.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
 *~
+*.o
+*.go
 .deps
 INSTALL
 aclocal.m4
 autom4te.cache
+/build-aux/compile
+/build-aux/config.guess
+/build-aux/config.sub
+/build-aux/depcomp
+/build-aux/install-sh
+/build-aux/mdate-sh
+/build-aux/missing
+/build-aux/texinfo.tex
 compile
+config.cache
 config.log
 config.scm
 config.status
@@ -20,8 +31,6 @@ install-sh
 makefile
 makefile.in
 /mcron
-mcron.c
 /mdate-sh
-*.o
 missing
 texinfo.tex
