maint: Use 'build-aux' directory for auxiliary build tools.
* configure.ac (AC_CONFIG_AUX_DIR): Set it to 'build-aux'.
* .gitignore: Adapt to it.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,14 @@
 INSTALL
 aclocal.m4
 autom4te.cache
+/build-aux/compile
+/build-aux/depcomp
+/build-aux/install-sh
+/build-aux/mdate-sh
+/build-aux/missing
+/build-aux/texinfo.tex
 compile
+config.cache
 config.log
 config.scm
 config.status
