--- a/build-aux/pre-inst-env.in
+++ b/build-aux/pre-inst-env.in
@@ -20,8 +20,8 @@
 abs_top_srcdir="`cd "@abs_top_srcdir@" > /dev/null; pwd`"
 abs_top_builddir="`cd "@abs_top_builddir@" > /dev/null; pwd`"
 
-GUILE_LOAD_COMPILED_PATH="$abs_top_builddir/scm${GUILE_LOAD_COMPILED_PATH:+:}$GUILE_LOAD_COMPILED_PATH"
-GUILE_LOAD_PATH="$abs_top_builddir/scm:$abs_top_srcdir/scm${GUILE_LOAD_PATH:+:}:$GUILE_LOAD_PATH"
+GUILE_LOAD_COMPILED_PATH="$abs_top_builddir/src${GUILE_LOAD_COMPILED_PATH:+:}$GUILE_LOAD_COMPILED_PATH"
+GUILE_LOAD_PATH="$abs_top_builddir/src:$abs_top_srcdir/src${GUILE_LOAD_PATH:+:}:$GUILE_LOAD_PATH"
 export GUILE_LOAD_COMPILED_PATH GUILE_LOAD_PATH
 
 PATH="$abs_top_builddir:$PATH"
