base: Rename (mcron core) module to (mcron base).
The 'configure' script deletes the 'core.*' files.  Having a file named
'base.scm' instead of 'core.scm' simplifies the build process without
changing the semantics.

* src/mcron/mcron-core.scm: Rename to ...
* src/mcron/base.scm: ... this.
All module users changed.
* Makefile.am (MODULES): Add 'src/mcron/base.scm'.
(CP): Remove variable.
(src/mcron/core.scm): Remove target.
(GEN_MODULES): Remove 'src/mcron/core.scm'.
(dist_mcronmodule_DATA): Remove 'src/mcron/mcron-core.scm'
* doc/mcron.texi: Adapt to name change.
* .gitignore: Update.

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,6 +23,7 @@ mcron_DEPENDENCIES = $(GOBJECTS) # Build Guile modules before linking.
 mcron_LDADD = @GUILE_LIBS@
 
 MODULES =				\
+  src/mcron/base.scm			\
   src/mcron/environment.scm		\
   src/mcron/job-specifier.scm		\
   src/mcron/main.scm			\
@@ -31,13 +32,7 @@ MODULES =				\
   src/mcron/vixie-time.scm
 
 GEN_MODULES =				\
-  src/mcron/config.scm			\
-  src/mcron/core.scm
-
-CP = @CP@
-# XXX: Prevent the 'configure' script to delete the 'core.*' files.
-src/mcron/core.scm: src/mcron/mcron-core.scm
-	$(CP) $< $@
+  src/mcron/config.scm
 
 GOBJECTS =				\
   $(GEN_MODULES:%.scm=%.go)		\
@@ -49,8 +44,7 @@ mcronmodule_DATA =			\
 
 dist_mcronmodule_DATA = 		\
   $(MODULES)				\
-  src/mcron/crontab.scm			\
-  src/mcron/mcron-core.scm
+  src/mcron/crontab.scm
 
 # Unset 'GUILE_LOAD_COMPILED_PATH' altogether while compiling.  Otherwise, if
 # $GUILE_LOAD_COMPILED_PATH contains $(mcronmoduledir), we may find .go files
