--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,6 @@
 
 AC_PREREQ(2.61)
 AC_INIT([GNU Mcron], [1.0.8], [bug-mcron@gnu.org])
-AC_CONFIG_HEADER([src/config.h])
 AC_CONFIG_SRCDIR([src/mcron.c])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_REQUIRE_AUX_FILE([test-driver.scm])
@@ -31,9 +30,8 @@ AM_INIT_AUTOMAKE([subdir-objects -Wall -Wno-override])
 AM_SILENT_RULES([yes])		# enables silent rules by default
 
 moduledir="${datarootdir}/guile/site/2.0"
+AC_SUBST([moduledir])
 AC_SUBST([mcronmoduledir], ["${moduledir}/mcron"])
-AC_DEFINE_UNQUOTED([PACKAGE_LOAD_PATH], ["${moduledir}"],
-  [Define to the guile modules location of this package.])
 AC_MSG_CHECKING([whether debugging is requested])
 AC_ARG_ENABLE(debug,
               AC_HELP_STRING([--enable-debug],
